XO_Project_UAT/Project--XOGrp--UAT/src/objects/zqu__Quote__c.object
<CustomObject>
    <fields>
        <fullName>zqu__BillCycleDay__c</fullName>
        <label>Bill Cycle Day</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact that is billed for this Quote.</description>
        <inlineHelpText>The Contact that is billed for this Quote.</inlineHelpText>
        <label>Bill to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__BillingBatch__c</fullName>
        <label>Billing Batch</label>
        <picklist>
            <picklistValues>
                <fullName>Batch1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Batch2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__BillingCycleDay__c</fullName>
        <description>(Deprecated)</description>
        <formula>TEXT(DAY( zqu__StartDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Deprecated)</inlineHelpText>
        <label>(Deprecated)BillingCycleDay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__BillingEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Entity</label>
        <referenceTo>zqu__BillingEntity__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__BillingMethod__c</fullName>
        <description>The Billing Method of the Quote.</description>
        <inlineHelpText>The Billing Method of the Quote.</inlineHelpText>
        <label>Invoice Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Calculate_Quote_Metrics_Through__c</fullName>
        <description>Select how you would like Quote Metrics values to be calculated</description>
        <inlineHelpText>Select how you would like Quote Metrics values to be calculated.If you select the End of Term option, Evergreen Subscription metrics will be calculated for 1 billing period.</inlineHelpText>
        <label>Calculate Quote Metrics Through</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__CancellationDate__c</fullName>
        <description>Date on which the cancellation is made.</description>
        <inlineHelpText>Date on which the cancellation is made.</inlineHelpText>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__CancellationEffectiveDate__c</fullName>
        <label>Cancellation Effective Date</label>
        <picklist>
            <picklistValues>
                <fullName>Enter a Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>End of Current Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Last Invoice Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Certificate_ID__c</fullName>
        <label>Certificate ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Certificate_Type__c</fullName>
        <label>Certificate Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__CommunicationProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Communication Profile</label>
        <referenceTo>zqu__CommunicationProfile__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Company_Code__c</fullName>
        <label>Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <description>The Currency the Quote is in.</description>
        <inlineHelpText>The Currency the Quote is in.</inlineHelpText>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Customer_Acceptance_Date__c</fullName>
        <inlineHelpText>Customer Acceptance Date should be on or after Service Activation Date.
If Customer Acceptance Date is not required in Zuora, the Service Activation Date will be used as the Customer Acceptance Date.</inlineHelpText>
        <label>Customer Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountMRR__c</fullName>
        <description>The Contracted Delta Discount MRR value returned from previewing the Quote in Zuora</description>
        <inlineHelpText>The Contracted Delta Discount MRR value returned from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCBTax__c</fullName>
        <description>Tax on Delta Discount TCB retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Delta Discount TCB retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCB__c</fullName>
        <description>Delta Discount TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCV__c</fullName>
        <description>Delta Discount TCV value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCV value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRR__c</fullName>
        <description>Changed MRR for this quote</description>
        <inlineHelpText>Changed MRR for this quote</inlineHelpText>
        <label>DeltaMRR (Deprecated)</label>
        <summarizedField>zqu__QuoteAmendment__c.zqu__DeltaMRR__c</summarizedField>
        <summaryForeignKey>zqu__QuoteAmendment__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCBTax__c</fullName>
        <description>Tax on Delta TCB returned from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Delta TCB returned from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCV__c</fullName>
        <description>Changed TCV for this quote</description>
        <inlineHelpText>Changed TCV for this quote</inlineHelpText>
        <label>DeltaTCV (Deprecated)</label>
        <summarizedField>zqu__QuoteAmendment__c.zqu__DeltaTCV__c</summarizedField>
        <summaryForeignKey>zqu__QuoteAmendment__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>A description of the amendment.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountMRR__c</fullName>
        <description>The Discount CMRR value returned by previewing the Quote in Zuora</description>
        <inlineHelpText>The Discount CMRR value returned by previewing the Quote in Zuora</inlineHelpText>
        <label>Discount MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountTCBTax__c</fullName>
        <description>Tax on Discount TCB retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Discount TCB retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Discount TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountTCB__c</fullName>
        <description>Discount TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Discount TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Discount TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountTCV__c</fullName>
        <description>Discount TCV value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Discount TCV value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Discount TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ElectronicPaymentMethodId__c</fullName>
        <description>This is the Zuora payment method id created by the HPM.</description>
        <inlineHelpText>This is the Zuora payment method id created by the HPM.</inlineHelpText>
        <label>Electronic Payment Method Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ExistSubscriptionID__c</fullName>
        <label>Exist Subscription ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ExistingProductsStored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag determines whether the existing products are stored successfully</description>
        <inlineHelpText>The flag determines whether the existing products are stored successfully</inlineHelpText>
        <label>Existing Products Stored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__GenerateInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag to control whether the invoice will be generated with current quote when the quote is sent to Zuora.</description>
        <inlineHelpText>The flag to control whether the invoice will be generated with current quote when the quote is sent to Z-Billing</inlineHelpText>
        <label>Generate Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Hidden_Subscription_Name__c</fullName>
        <label>Hidden Subscription Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InitialTermPeriodType__c</fullName>
        <description>The period type for the first subscription term.</description>
        <inlineHelpText>The option to determine which period type to use for the subscription term.</inlineHelpText>
        <label>Initial Term Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__InitialTerm__c</fullName>
        <description>The Initial Term of the Quote.</description>
        <inlineHelpText>The Initial Term of the Quote.</inlineHelpText>
        <label>Initial Term</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceID__c</fullName>
        <description>The system-generated Zuora invoice ID associated with the subscription that is just created by the current quote.</description>
        <inlineHelpText>The system-generated Zuora invoice ID associated with the subscription that is just created by the current quote.</inlineHelpText>
        <label>Zuora Invoice ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceOwnerId__c</fullName>
        <description>Invoice Owner Id comes from Z360 Package Billing Account&apos;</description>
        <label>Invoice Owner Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceOwnerName__c</fullName>
        <label>Invoice Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceProcessingOption__c</fullName>
        <description>The option to determine which level the invoice will be generated when the quote is sent to Zuora.</description>
        <inlineHelpText>The option to determine which level the invoice will be generated when the quote is sent to Z-Billing.</inlineHelpText>
        <label>Invoice Processing Option</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceSeparately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the subscription is invoiced separately. If TRUE, then all charges for this subscription are collected into the subscription&apos;s own invoice.</description>
        <inlineHelpText>Determines if the subscription is invoiced separately. If TRUE, then all charges for this subscription are collected into the subscription&apos;s own invoice.</inlineHelpText>
        <label>Invoice Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceTargetDate__c</fullName>
        <label>Invoice Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Template</label>
        <referenceTo>zqu__InvoiceTemplate__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Charge_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag to indicate whether the Quote Metrics need to be recalculated.</description>
        <inlineHelpText>The flag to indicate whether the Quote Metrics need to be recalculated.</inlineHelpText>
        <label>Is Charge Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Parent_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked upon creation of the quote record if the quote is the Parent of one or more Sub Quotes.</description>
        <inlineHelpText>This box will be checked upon creation of the quote record if the quote is the Parent of one or more Sub Quotes.</inlineHelpText>
        <label>Is Parent Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Issuing_Jurisdiction__c</fullName>
        <label>Issuing Jurisdiction</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__MRR__c</fullName>
        <label>MRR (Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__MRRForRollup__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__Number__c</fullName>
        <description>The Quote Number.</description>
        <displayFormat>Q{000000}</displayFormat>
        <inlineHelpText>The Quote Number.</inlineHelpText>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>zqu__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity associated with this Quote.</description>
        <inlineHelpText>The Opportunity associated with this Quote.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ParentQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field for the Sub-Quote to look up for it&apos;s parent Quote,  the Primary Quote.</description>
        <inlineHelpText>This is a lookup field for the Sub-Quote to look up for it&apos;s parent Quote,  the Primary Quote.</inlineHelpText>
        <label>Parent Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>SubQuotes</relationshipLabel>
        <relationshipName>SubQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__PaymentGateway__c</fullName>
        <description>This field is used to set the Gateway on New Billing Accounts in Zuora for New Subscription Quotes only.</description>
        <inlineHelpText>This field is used to set the Gateway on New Billing Accounts in Zuora for New Subscription Quotes only. Values in this picklist must correspond to values in Zuora.</inlineHelpText>
        <label>Payment Gateway</label>
        <picklist>
            <picklistValues>
                <fullName>Use Default Gateway</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__PaymentMethod__c</fullName>
        <description>The Payment Method for the Quote.</description>
        <inlineHelpText>The Payment Method for the Quote.</inlineHelpText>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__PaymentTerm__c</fullName>
        <description>The Payment Term.</description>
        <inlineHelpText>The Payment Term.</inlineHelpText>
        <label>Payment Term</label>
        <picklist>
            <controllingField>zqu__PaymentMethod__c</controllingField>
            <picklistValues>
                <fullName>Due Upon Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Delta_MRR__c</fullName>
        <description>The Contracted Delta MRR returned by previewing the quote in Zuora</description>
        <inlineHelpText>Delta MRR which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Delta MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Delta_TCB__c</fullName>
        <description>Delta TCB returned from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta TCB returned from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Delta_TCV__c</fullName>
        <description>Delta TCV which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Delta TCV which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Delta TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Discount__c</fullName>
        <description>Discount which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Discount which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_MRR__c</fullName>
        <description>The Contracted MRR returned by previewing the quote in Zuora</description>
        <inlineHelpText>MRR value which is got by previewing the quote from Zuora. TEST</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_SubTotal__c</fullName>
        <description>Sub-total which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Sub-total which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_TCB__c</fullName>
        <description>Total Contracted Billing returned from previewing the quote in Zuora</description>
        <inlineHelpText>Total Contracted Billing returned from previewing the quote in Zuora</inlineHelpText>
        <label>TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_TCV__c</fullName>
        <description>TCV value which is got by previewing the quote from Zuora</description>
        <inlineHelpText>TCV value which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Tax__c</fullName>
        <description>Tax which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Tax which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Total__c</fullName>
        <description>Total which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Total which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a Primary Quote attached to an Opportunity.</description>
        <inlineHelpText>Identifies a Primary Quote attached to an Opportunity.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ProcessPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag to control whether the payment will be processed with current quote when the quote is sent to Zuora.</description>
        <inlineHelpText>The flag to control whether the payment will be processed with current quote when the quote is sent to Z-Billing.</inlineHelpText>
        <label>Process Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ProductSelectorVersion__c</fullName>
        <formula>TEXT(zqu__ZuoraConfig__r.zqu__ProductSelectorVersion__c)</formula>
        <label>ProductSelector Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteBusinessType__c</fullName>
        <description>Quote Business Type.</description>
        <inlineHelpText>Quote Business Type.</inlineHelpText>
        <label>Quote Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote template that is used to generate the Quote PDF or Word document.</description>
        <inlineHelpText>The Quote template that will be used to generate the Quote PDF or Word document.  If not selected, the user will select a quote template from a list of available quote templates when creating Quote PDF or Word document.</inlineHelpText>
        <label>Quote Template</label>
        <referenceTo>zqu__Quote_Template__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RampFrequency__c</fullName>
        <description>Specifies how often products added to the Quote should be ramped.</description>
        <inlineHelpText>Specifies how often products added to the Quote should be ramped.</inlineHelpText>
        <label>Ramp Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__RecordReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is allowed to edit the Quote record according to Zuora Config</description>
        <inlineHelpText>If it is allowed to edit the Quote record according to Zuora Config</inlineHelpText>
        <label>RecordReadOnly</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>